main/default/objects/Vehicle_Part__c/Vehicle_Part__c.object-meta.xml
<CustomObject>
    <description>The vehicle parts</description>
    <label>Vehicle Part</label>
    <nameField>
        <label>Vehicle Parts Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vehicle Parts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>