main/default/objects/Vehicle_Part__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Vehicle part notes</description>
    <label>Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>