main/default/objects/Vehicle_Part__c/fields/Remind_By__c.field-meta.xml
<CustomField>
    <fullName>Remind_By__c</fullName>
    <description>Reminder type for the part</description>
    <inlineHelpText>Reminder type for the part</inlineHelpText>
    <label>Remind By</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Distance</fullName>
                <default>true</default>
                <label>Distance</label>
            </value>
            <value>
                <fullName>Month</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>