main/default/objects/Vehicle_Part__c/fields/Remind_By_Distance__c.field-meta.xml
<CustomField>
    <fullName>Remind_By_Distance__c</fullName>
    <description>Remind by Distance</description>
    <label>Remind By (Distance)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>