main/default/objects/Vehicle_Part__c/fields/Remind_By_Months__c.field-meta.xml
<CustomField>
    <fullName>Remind_By_Months__c</fullName>
    <description>Reminder in Months</description>
    <label>Remind By (Months)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>